2001-02-03  Max Horn  <max@quendi.de>
	* actors.cc: "fixed" Marsten crash (teleport code was buggy)

2001-02-01  Jeff Freedman  <jeff@amy.nerble.net>

	* Mass-death spell now works.

2001-01-31  Jeff Freedman  <jeff@amy.nerble.net>

	* Fixed last night's conversation fix :-(

2001-01-30  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc (Sit_schedule): Wait before sitting a 2nd time.
	Fixes bug in SI Knight's Test.
	* actors.cc: Actor::unready_weapon() to fix Krieg.
	* conversation.cc:  Show correct Avatar face in SI.

2001-01-30  Tristan Tarrant <nadir@users.sourceforge.net>
	* tools/expack.cc: Added an -i option which reads in a file describing
	  the flx to build. Got rid of the really gross MacOS hack.
	* data/flx.in: Description for creating exult.flx

2001-01-28  Jeff Freedman  <jeff@amy.nerble.net>
	* Rat-race game works.
	* Armageddon spell implemented.

2001-01-26  Tristan Tarrant <nadir@users.sourceforge.net>
	* mapedit/dirbrowser.*: added a nice directory browser widget stolen from XMMS
	* mapedit/objbrowse.*: added framework for generic browsers
	* mapedit/paledit.*: made it conform to Object_browser
	* mapedit/shapelst.*: ditto
	* mapedit/studio.cc: Use a tree instead of a list for the files, categorize the 
	  files by type, use the directory browser to select the static path

2001-01-26  Tristan Tarrant <nadir@users.sourceforge.net>
	* mapedit/shapelst.*: show shapes on multiple rows.
	* mapedit/studio.*: fixes.

2001-01-25  Tristan Tarrant <nadir@users.sourceforge.net>
	* mapedit/*: more work.

2001-01-25  Jeff Freedman  <jeff@amy.nerble.net>
	* SI:  Fixed some usecode assignments (so Knight's test isn't so
	broken).  Fixed dungeon rendering there too.
	* wud.c - Give "-a" as func. # to print whole thing.

2001-01-25  Tristan Tarrant <nadir@users.sourceforge.net>
	* configure.in: check for libglade
	* mapedit/*: general hacking resulting in a libglade'ified ExultStudio.
	  Caveat: it is very picky about where it looks for stuff. 
	